<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_weather_today">Погода на сегодня</string>
    <string name="action_weather_week">Погода на неделю</string>
    <string name="action_drawer_settings">Настройки</string>
    <string name="action_drawer_exit">Выход</string>

    <string name="title_activity_settings">Настройки</string>



    <string name="update_by_wi_fi">Обновлять только по Wi-Fi</string>
    <string name="update_by_start">Обновлять при старте</string>
    <string name="ask_when_exit">Спрашивать при выходе</string>

    <string name="ask_exit">Вы действительно хотите выйти?</string>
    <string name="ask_exit_yes">Да</string>
    <string name="ask_exit_no">Нет</string>
    <string name="current_weather_title">Погода на сегодня</string>
    <string name="todo">TODO</string>
    <string name="current_weather_place">Place</string>
    <string name="current_weather_name">Weather name</string>
    <string name="current_day">Current day</string>
    <string name="current_weather_degree">10</string>
    <string name="current_month">August, 28</string>
    <string name="tv_degree">C</string>
    <string name="tv_degree_item">0</string>
    <string name="tv_additional">Дополнительно</string>
    <string name="tv_humidity">Влажность</string>
    <string name="tv_humidity_value">90</string>
    <string name="tv_humidity_proc">%</string>
    <string name="tv_pressure">Давление</string>
    <string name="tv_pressure_value">900</string>
    <string name="tv_pressure_">мм</string>
    <string name="tv_wind_speed">Ветер</string>
    <string name="tv_wind_speed_value">10</string>
    <string name="tv_wind_speed_value_">м/с</string>
    <string name="tv_sunrise">Восход</string>
    <string name="tv_sunrise_time">6:30</string>
    <string name="tv_sunrise_time_">утра</string>
    <string name="tv_sunset">Закат</string>
    <string name="tv_sunset_time">17:00</string>
    <string name="tv_sunset_time_">вечера</string>

    <string name="zaporizhzhya_city">Zaporizhzhya</string>

    <string name="weather_mist">mist</string>
    <string name="weather_broken_clouds">broken clouds</string>

    <string name="weather_mist_ru">mist</string>
    <string name="weather_broken_clouds_ru">broken clouds</string>
    <string name="update_weather_request">Обновить</string>
    <string name="last_update_weather">Последнее обновление в</string>
    <string name="last_update_weather_time">00:00</string>

</resources>
