<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_exit"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        />
    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_exit_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_exit_yes"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />
        <Button
            android:id="@+id/btn_exit_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_exit_no"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

</LinearLayout>