<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/x_30_large"
        android:layout_height="@dimen/x_30_large"
        android:layout_marginTop="@dimen/large"
        android:layout_marginEnd="@dimen/standard"
        app:layout_constraintEnd_toStartOf="@+id/place"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_marker_three"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/large"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/current_weather_place"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/x_30_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/x_30_large"
        android:layout_height="@dimen/x_30_large"
        android:layout_marginTop="@dimen/x_large"
        android:layout_marginEnd="@dimen/x_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu"
        tools:ignore="MissingConstraints" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_weather_today"
        android:layout_width="@dimen/x_150_large"
        android:layout_height="@dimen/x_150_large"
        android:layout_marginStart="128dp"
        android:layout_marginTop="144dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place"
        app:srcCompat="@drawable/icon_haze"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_weather_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/standard"
        android:fontFamily="@font/roboto_italic"
        android:text="@string/current_weather_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/x_large_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_weather_today" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/x_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_weather_name"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <TextView
                android:id="@+id/tv_current_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/droid_sans"
                android:text="@string/current_day"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/standard"
                android:textSize="@dimen/x_26_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_weather_today" />

            <TextView
                android:id="@+id/tv_current_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/current_month"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/x_large_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_weather_today" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="@color/colorWhite"
            android:layout_marginStart="@dimen/large"
            android:layout_marginTop="@dimen/standard"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tv_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/current_weather_degree"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x_100_sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/tv_degree_item"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x_large_sp"
            android:layout_gravity="center_vertical"
            android:paddingBottom="@dimen/x_40_large"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/tv_degree"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/x_90_sp"
            />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>