<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:theme="@style/AppTheme"
    android:background="@color/colorGray">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_by_wi_fi"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Switch
            android:id="@+id/switch_wi_fi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:theme="@style/AppTheme"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_by_start"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/switch_update_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:theme="@style/AppTheme"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_when_exit"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            />
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Switch
                android:id="@+id/switch_ask_when_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:theme="@style/AppTheme"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>